formatetted entire index html file

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-3">Hangman Game!!!</h1>
-            <h2>Guess The Country!!!</h2>           
+            <h1 class="display-3">Guess The Country - Hangman</h1>        
         </div>
     </div>
 
