changed press any key to start to press any letter to start

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="card text-center">
         <div class="card-body">         
             <p>
-                PRESS ANY KEY TO GET STARTED
+                PRESS ANY LETTER TO GET STARTED
             </p>
             <p>
                 WINS!
